# brevity

./: .env  alembic.ini  docker-compose.yml  pyproject.toml  test.db
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 91cdf6417c85_create_urls_and_clicks_tables.py
app/: main.py
app/core/: config.py  database.py
app/models/: __init__.py  click.py  url.py
app/routers/: urls.py
app/schemas/: url.py
app/services/: cache.py  shortener.py
tests/: conftest.py  test_urls.py
